--- a/wiki/ApiGetGame.wiki
+++ b/wiki/ApiGetGame.wiki
@@ -6,31 +6,31 @@ GetGame title search returns game data in an XML document.
 
 Parameters:
 
-name (string): Alpha characters only, case insensitive, partial phrases excepted, no partial words.
+*name* (string): Alpha characters only, case insensitive, partial phrases excepted, no partial words.
 
-example request:
+_example request_:
 `http://thegamesdb.net/api/GetGame.php?name=halo`
 
-example result:
-`<?xml version="1.0" encoding="UTF-8" ?>
+_example result_:
 
+{{{
+<?xml version="1.0" encoding="UTF-8" ?>
 <Data>
-<Game>
-<id>1</id>
-<GameTitle>Halo</GameTitle>
-<ReleaseDate>3/10/2010</ReleaseDate>
-<Overview>Here is an overview of this game.</Overview>
-</Game>
-<Game>
-<id>2</id>
-<GameTitle>Halo 2</GameTitle>
-
-<ReleaseDate></ReleaseDate>
-</Game>
-<Game>
-<id>3</id>
-<GameTitle>Halo 3</GameTitle>
-<ReleaseDate></ReleaseDate>
-</Game>
-</Data>`
-
+    <Game>
+        <id>1</id>
+        <GameTitle>Halo</GameTitle>
+        <ReleaseDate>3/10/2010</ReleaseDate>
+        <Overview>Here is an overview of this game.</Overview>
+    </Game>
+    <Game>
+        <id>2</id>
+        <GameTitle>Halo 2</GameTitle>
+        <ReleaseDate></ReleaseDate>
+    </Game>
+    <Game>
+        <id>3</id>
+        <GameTitle>Halo 3</GameTitle>
+        <ReleaseDate></ReleaseDate>
+    </Game>
+</Data>
+}}}
