--- a/wiki/ApiUpdates.wiki
+++ b/wiki/ApiUpdates.wiki
@@ -1,4 +1,5 @@
 #summary Updates API documentation.
+#labels Phase-Implementation
 
 = Details =
 
@@ -9,28 +10,14 @@ Parameters:
 *time* (int): time in seconds.
 
 _example request_:
-`http://thegamesdb.net/api/GetGame.php?name=halo`
+`http://thegamesdb.net/api/Updates.php?time=2000`
 
 _example result_:
 
 {{{
 <?xml version="1.0" encoding="UTF-8" ?>
-<Data>
-    <Game>
-        <id>1</id>
-        <GameTitle>Halo</GameTitle>
-        <ReleaseDate>3/10/2010</ReleaseDate>
-        <Overview>Here is an overview of this game.</Overview>
-    </Game>
-    <Game>
-        <id>2</id>
-        <GameTitle>Halo 2</GameTitle>
-        <ReleaseDate></ReleaseDate>
-    </Game>
-    <Game>
-        <id>3</id>
-        <GameTitle>Halo 3</GameTitle>
-        <ReleaseDate></ReleaseDate>
-    </Game>
-</Data>
+<Items>
+    <Time>1274641478</Time>
+    <Game>1</Game>
+</Items>
 }}}
