Edited wiki page through web user interface.

--- a/wiki/ApiUpdates.wiki
+++ b/wiki/ApiUpdates.wiki
@@ -3,7 +3,7 @@
 
 = Details =
 
-The UpdatesApi returns all the games updated since the time in seconds. 
+The ApiUpdates returns all the games updated since the time in seconds. 
 
 Parameters:
 
