--- a/wiki/ImagesAndArtWork.wiki
+++ b/wiki/ImagesAndArtWork.wiki
@@ -2,14 +2,8 @@
 
 = Introduction =
 All fan art resolutions must be 1280x720 or 1920x1080.
-Banners resolution must be 140x758.
+Banners resolution must be 760x140.
 
-*Example Backdrops / Fanart and Example Publisher Banners:*
+Images must be of good quality.  We don't want blurry or pixelated images.
 
-http://thegamesdb.googlecode.com/issues/attachment?aid=588887428493181751&name=crysis1080.jpg&inline=1
-
-http://thegamesdb.googlecode.com/issues/attachment?aid=1317844395296709501&name=bioshock1080.jpg&inline=1
-
-http://thegamesdb.googlecode.com/issues/attachment?aid=2051266943681835604&name=Blizzard+Banner.jpg&inline=1
-
-http://thegamesdb.googlecode.com/issues/attachment?aid=3651346122153065854&name=Nintendo+Banner.jpg&inline=1
+Fan Art:  Look at the image you're using... Can this be used for more than one game?  If you have a picture that is just Mario, you can probably use this as artwork for multiple mario games.  This is perfectly acceptable.  However, if artwork is title specific, please don't use it on another title in the game series that it doesn't apply to.  This would be something like a picture of a character that shows up in one game like Super Mario Bros. 2, but isn't in Super Mario Bros.
