Edited wiki page ApiGetGame through web user interface.

--- a/wiki/ApiGetGame.wiki
+++ b/wiki/ApiGetGame.wiki
@@ -3,11 +3,12 @@
 
 = Details =
 
-The GetGameApi title search returns game data in an XML document. 
+The GetGameApi title search returns game data in an XML document or if an id is given it just returns the data for that specific game. An id overrides a name search. 
 
 Parameters:
 
 *name* (string): Alpha characters only, case insensitive, partial phrases excepted, no partial words.
+*id* (int): ID representing a specific game.
 
 _example request_:
 `http://thegamesdb.net/api/GetGame.php?name=halo`
@@ -32,6 +33,27 @@ _example result_:
         <id>3</id>
         <GameTitle>Halo 3</GameTitle>
         <ReleaseDate></ReleaseDate>
+    </Game>
+</Data>
+}}}
+
+
+_example request_:
+`http://thegamesdb.net/api/GetGame.php?id=2`
+
+_example result_:
+
+{{{
+<?xml version="1.0" encoding="UTF-8" ?>
+<Data>
+    <Game>
+        <id>2</id>
+        <GameTitle>Crysis</GameTitle>
+        <ReleaseDate></ReleaseDate>
+        <banner>graphical/2-g2.jpg</banner>
+        <Overview>From the makers of Far Cry, Crysis offers FPS fans the best-looking, most highly-evolving gameplay, requiring the player to use adaptive tactics and total customization of weapons and armor to survive in dynamic, hostile environments including Zero-G. 
+
+Earth, 2019. A team of US scientists makes a frightening discovery on an island in the South China Sea. All contact with the team is lost when the North Korean Government quickly seals off the area. The United States responds by dispatching an elite team of Delta Force Operators to recon the situation. As tension rises between the two nations, a massive alien ship reveals itself in the middle of the island. The ship generates an immense force sphere that freezes a vast portion of the island and drastically alters the global weather system. Now the US and North Korea must join forces to battle the alien menace. With hope rapidly fading, you must fight epic battles through tropical jungle, frozen landscapes, and finally into the heart of the alien ship itself for the ultimate Zero G showdown.</Overview>
     </Game>
 </Data>
 }}}
