--- a/wiki/Available_API_Calls.wiki
+++ b/wiki/Available_API_Calls.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary This is a list of items that can be fetched using the API.
 
 = Introduction =
 
