Edited wiki page API_GetGamesList through web user interface.

--- a/wiki/API_GetGamesList.wiki
+++ b/wiki/API_GetGamesList.wiki
@@ -5,7 +5,12 @@
 
 The GetGamesList API search returns a listing of games matched up with loose search terms.
 
-Sub-items returned for a game are:
+*Available Parameters:*
+
+  * name (required)
+  * platform (optional) - See this wiki article for a list of valid platforms API_ValidPlatformsList
+
+*Response Items:*
 
     >id
 
