Added context about resolution support in API.

--- a/wiki/API_GetArt.wiki
+++ b/wiki/API_GetArt.wiki
@@ -3,7 +3,7 @@
 
 = Overview =
 
-This API feature returns a list of available artwork types and locations specific to the requested game id in the database.
+This API feature returns a list of available artwork types and locations specific to the requested game id in the database.  It also lists the resolution of any images available.  Scrapers can be set to use a minimum or maximum resolution for specific images.
 
 Accepted arguments for the GetArt.php GET request:
   * id
@@ -27,39 +27,36 @@ Returns the Following
 <baseImgUrl>http://thegamesdb.net/banners/</baseImgUrl>
 <Images>
 <fanart>
-<original>fanart/original/910-1.jpg</original>
-<vignette>fanart/vignette/910-1.jpg</vignette>
+<original width="1920" height="1080">fanart/original/910-1.jpg</original>
+<vignette width="1920" height="1080">fanart/vignette/910-1.jpg</vignette>
 <thumb>fanart/thumb/910-1.jpg</thumb>
 </fanart>
 <fanart>
-<original>fanart/original/910-2.jpg</original>
-
-<vignette>fanart/vignette/910-2.jpg</vignette>
+<original width="1920" height="1080">fanart/original/910-2.jpg</original>
+<vignette width="1920" height="1080">fanart/vignette/910-2.jpg</vignette>
 <thumb>fanart/thumb/910-2.jpg</thumb>
 </fanart>
 <fanart>
-<original>fanart/original/910-3.jpg</original>
-<vignette>fanart/vignette/910-3.jpg</vignette>
+<original width="1920" height="1080">fanart/original/910-3.jpg</original>
+<vignette width="1920" height="1080">fanart/vignette/910-3.jpg</vignette>
 <thumb>fanart/thumb/910-3.jpg</thumb>
 </fanart>
 <fanart>
-<original>fanart/original/910-4.jpg</original>
-<vignette>fanart/vignette/910-4.jpg</vignette>
-
+<original width="1920" height="1080">fanart/original/910-4.jpg</original>
+<vignette width="1920" height="1080">fanart/vignette/910-4.jpg</vignette>
 <thumb>fanart/thumb/910-4.jpg</thumb>
 </fanart>
 <fanart>
-<original>fanart/original/910-5.jpg</original>
-<vignette>fanart/vignette/910-5.jpg</vignette>
+<original width="1920" height="1080">fanart/original/910-5.jpg</original>
+<vignette width="1920" height="1080">fanart/vignette/910-5.jpg</vignette>
 <thumb>fanart/thumb/910-5.jpg</thumb>
 </fanart>
 <fanart>
-<original>fanart/original/910-6.jpg</original>
-<vignette>fanart/vignette/910-6.jpg</vignette>
+<original width="1920" height="1080">fanart/original/910-6.jpg</original>
+<vignette width="1920" height="1080">fanart/vignette/910-6.jpg</vignette>
 <thumb>fanart/thumb/910-6.jpg</thumb>
-
 </fanart>
-<boxart side='front'>boxart/original/front/910-1.jpg</boxart>
+<boxart side="front" width="1703" height="2330">boxart/original/front/910-1.jpg</boxart>
 </Images>
 </Data>
 }}}
