Edited wiki page API_GetGamesList through web user interface.

--- a/wiki/API_GetGamesList.wiki
+++ b/wiki/API_GetGamesList.wiki
@@ -5,6 +5,8 @@
 
 The GetGamesList API search returns a listing of games matched up with loose search terms.
 
+_Note: We have implemented special character stripping and loose word order searching in an attempt to provide better matching and a return a greater number of relevant hits._
+
 *Available Parameters:*
 
   * name (required)
