--- a/wiki/ImagesAndArtWork.wiki
+++ b/wiki/ImagesAndArtWork.wiki
@@ -1,9 +1,67 @@
 #summary Information about artwork.
+#labels Art
 
-= Introduction =
-All fan art resolutions must be 1280x720 or 1920x1080.
-Banners resolution must be 760x140.
+= TheGamesDB Art Wiki =
 
-Images must be of good quality.  We don't want blurry or pixelated images.
+==Uploading Images==
 
-Fan Art:  Look at the image you're using... Can this be used for more than one game?  If you have a picture that is just Mario, you can probably use this as artwork for multiple mario games.  This is perfectly acceptable.  However, if artwork is title specific, please don't use it on another title in the game series that it doesn't apply to.  This would be something like a picture of a character that shows up in one game like Super Mario Bros. 2, but isn't in Super Mario Bros.
+Artwork for games can be some amazing pieces of work. We love the way artwork makes the programs that use the API look. Without the artwork, we would just have text! With that being said, we ask that you be smart about the images that you upload. We encourage you to find artwork and create your own, but please don't upload anything that is blurry, pixelated, or any sort of low quality. One bad image is all it takes to ruin the look of a game. This is also why we ask that you follow the resolution requirements we have set for image types. Also, DO NOT upload images that contain nudity. This includes animated nudity. Just because it is a cartoon/anime does not make the nudity okay. Keep in mind that people of ALL AGES browse this site, and we need to protect children from viewing material deemed inappropriate by applicable laws. If you upload an image of poor quality or inappropriate material, your upload privileges will be disallowed.
+
+==All Images==
+
+ * The Banner language should be set on upload to the language on the banner
+ * Images must be JPG or PNG.
+ * Each Creator is limited to 3 banners per game. Please try and make each banner unique and not simply the same images with different fonts.
+ * While some games do contain nudity please refrain from using images which contain it.
+ * Do not take another artists banners to alter them slightly then re-upload them. Some artists have spent a good deal of time on the images they upload and it is not acceptable to alter their work without permission.
+
+==Fan Art==
+
+ * Fanart must be 1280x720 or 1920x1080
+ * Images must be of good quality. We don't want blurry or pixelated images.
+ * Look at the image you're using... Can this be used for more than one game? If you have a picture that is just Mario, you can probably use this as artwork for multiple mario games. This is perfectly acceptable. However, if artwork is title specific, please don't use it on another title in the game series that it doesn't apply to. This would be something like a picture of a character that shows up in one game like Super Mario Bros. 2, but isn't in Super Mario Bros.
+
+==Banners==
+
+ * Banners must be 760 x 140
+ * Text banners generally use Arial Bold font, 27pt as the text.
+
+===Example Banners===
+
+http://thegamesdb.net/images/ayumi-banner-xblades.jpg
+
+http://thegamesdb.net/images/Banner%20-%20Mario%20Joy.jpg
+
+http://thegamesdb.net/banners/graphical/1369-g.jpg
+
+----
+
+==Resources==
+
+----
+
+===Image Sources===
+
+ * [http://images.google.com/ Google Image Search]
+ * [http://emumovies.com/forums/index.php?app=ccs EmuMovies.com]
+ * [http://vgboxart.com/ VGBoxart.com]
+ * [http://www.gamewallpapers.com/ GameWallpapers.com]
+ * [http://game-walls.com/ Game-Walls.com]
+ * [http://www.gamespy.com/ GameSpy.com]
+ * [http://www.gamepro.com/pc/ GamePro.com]
+ * [http://www.gamesradar.com/ GamesRadar.com]
+ * [http://www.giantbomb.com/ GiantBomb.com]
+ * [http://imageevent.com/gamescans GameScanner]
+ * [http://www.wikipedia.org/ Wikipedia]
+ * [http://www.vgexperience.net/index.php VGExperience.net]
+ * [http://www.mobygames.com/ MobyGames.com]
+ * [http://www.thecoverproject.net/ TheCoverProject]
+ * [http://www.vgmuseum.com/ Video Game Museum]
+ * [http://wiitdb.com/ WiiTDB]
+ * [http://wallpaperswide.com/games-desktop-wallpapers.html Wallpapers Wide]
+ * [http://www.superbwallpapers.com/games/ Superb Wallpapers]
+ * [http://wallbase.cc/start/ WallBase]
+
+==Fonts==
+
+ * [http://www.dafont.com/ Dafont]
