--- a/wiki/Available_API_Calls.wiki
+++ b/wiki/Available_API_Calls.wiki
@@ -20,6 +20,7 @@ This is a list of items that can be fetched using the API.  For detailed functio
  * Actors
  * Site Rating
  * Co-op
+ * CRC
 
 = Art =
 
