Edited wiki page MilestoneReleases through web user interface.

--- a/wiki/MilestoneReleases.wiki
+++ b/wiki/MilestoneReleases.wiki
@@ -9,7 +9,7 @@
  * 0.3.5 (Bowser): Added reporting.  Added new game submission page.
  * 0.4 (Toad): Cleaned up unused code.  Added major API usability.  Added friendly messages.
  * 0.5 (Luigi): New API calls.  Make site more user-friendly.
- * 0.6 (Mario): Facelift a lot of UI.  Fix broken visual elements.
+ * 0.6 (Mario): Facelift a lot of UI.  New games functionality. Fix broken visual elements.
 
 ==Future==
 
