--- a/wiki/MilestoneReleases.wiki
+++ b/wiki/MilestoneReleases.wiki
@@ -15,7 +15,7 @@
 
  * 0.7 (Peach): This is primarily a facelifted website.  Adds lots of functionality.
  * 0.7.5 (Uploader):
- * 0.8 (Yoshi): This realease includes a new version of the API.
+ * 0.8 (Yoshi): This release includes a new version of the API.
  * 0.9 (Starfox): This release includes more UI changes.
 
 
