--- a/wiki/API_PlatformGames.wiki
+++ b/wiki/API_PlatformGames.wiki
@@ -1,4 +1,4 @@
-#This API call will list all games under a certain platform.
+This API call will list all games under a certain platform.
 
 = Introduction =
 
